Added Bootstrap and Design processes.

--- a/BookStore/Views/Shared/_LoginPartial.cshtml
+++ b/BookStore/Views/Shared/_LoginPartial.cshtml
@@ -16,11 +16,11 @@
 }
 else
     {
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Giriş Yap</a>
+        <li class="nav-item ">
+            <a class="btn btn-outline-primary mr-2" asp-area="Identity" asp-page="/Account/Login"><i class="bi bi-box-arrow-in-right"></i> Giriş Yap</a>
         </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Üye Ol</a>
+        <li class="nav-item me-md-2">
+            <a class="btn btn-outline-warning" asp-area="Identity" asp-page="/Account/Register"><i class="bi bi-person-add"></i> Üye Ol</a>
     </li>
 }
 </ul>
