Codefirst transactions and UI designing.

--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -29,6 +29,8 @@
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Kategoriler</a></li>
+                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Author" asp-action="Index">Yazarlar</a></li>
+                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Book" asp-action="Index">Kitaplar</a></li>
                             </ul>
                         </li>
 
