--- a/BookStore/Areas/Admin/Views/Author/Delete.cshtml
+++ b/BookStore/Areas/Admin/Views/Author/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model BookStore.Models.Category
+﻿@model BookStore.Models.Author
 
 @{
     ViewData["Title"] = "Delete";
@@ -9,14 +9,14 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Category</h4>
+    <h4>Author</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CategoryName)
+            @Html.DisplayNameFor(model => model.AuthorName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CategoryName)
+            @Html.DisplayFor(model => model.AuthorName)
         </dd>
     </dl>
     
