--- a/BookStore/Areas/Admin/Views/Author/Details.cshtml
+++ b/BookStore/Areas/Admin/Views/Author/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model BookStore.Models.Category
+﻿@model BookStore.Models.Author
 
 @{
     ViewData["Title"] = "Details";
@@ -8,14 +8,14 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Category</h4>
+    <h4>Author</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CategoryName)
+            @Html.DisplayNameFor(model => model.AuthorName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CategoryName)
+            @Html.DisplayFor(model => model.AuthorName)
         </dd>
     </dl>
 </div>
