--- a/BookStore/Areas/Admin/Views/Category/Index.cshtml
+++ b/BookStore/Areas/Admin/Views/Category/Index.cshtml
@@ -6,13 +6,15 @@
 }
 
 <div class="container">
-    <p>
-        <a asp-action="Create" class="btn btn-outline-primary">Yeni Kategori Ekle</a>
+    <p style="text-align:right;">
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#createCategory"><i class="bi bi-plus-circle"></i> Kategori Ekle</button>
+        @await Html.PartialAsync("_CreatePartialView",new Category())
     </p>
+
     <table class="table table-striped table-bordered" id="myTable">
         <thead>
             <tr align="right">
-                <th style ="padding-right: 320px">Kategori Adı</th>
+                <th style="padding-right: 320px">Kategori Adı</th>
                 <th style="text-align:center;">Düzenle</th>
                 <th style="text-align:center;">Sil</th>
             </tr>
@@ -25,13 +27,17 @@
                         @Html.DisplayFor(modelItem => item.CategoryName)
                     </td>
                     <td align="center">
-                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-success"><i class="bi bi-pencil-square"></i> Düzenle</a>
-                    </td >
+                        <button type="button"  class="btn btn-outline-success" data-toggle="modal" data-target="@("#UpdateCategory-"+ item.Id)" data-url="@Url.Action($"Update/{item.Id}")"><i class="bi bi-pencil-square"></i> Güncelle</button>
+                        @await Html.PartialAsync("_UpdatePartialView",item)
+                    </td>
                     <td align="center">
-                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger"><i class="bi bi-trash3"></i> Sil</a>
+                        <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="@("#DeleteCategory-"+ item.Id)" data-url="@Url.Action($"Delete/{item.Id}")"><i class="bi bi-trash3"></i> Sil
+                        </button>
+                        @await Html.PartialAsync("_DeletePartialView",item)
                     </td>
                 </tr>
             }
+
         </tbody>
     </table>
 </div>
