Areas Admin CRUD transactions.

--- a/BookStore/Areas/Admin/Views/Book/Details.cshtml
+++ b/BookStore/Areas/Admin/Views/Book/Details.cshtml
@@ -42,22 +42,22 @@
             @Html.DisplayFor(model => model.ImagePath)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ReadCount)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ReadCount)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Price)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Price)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsStock)
+            @Html.DisplayNameFor(model => model.StockCount)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsStock)
+            @Html.DisplayFor(model => model.StockCount)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.SellCount)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.SellCount)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IsActive)
