--- a/BookStore/Areas/Customer/Views/Home/Index.cshtml
+++ b/BookStore/Areas/Customer/Views/Home/Index.cshtml
@@ -1,8 +1,115 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model IEnumerable<BookStore.Models.Book>
+@{
+    ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<body>
+    <div class="container">
+        <div class="row">
+            <!-- slider start -->
+            <div id="carouselExampleDark" class="carousel carousel-dark slide mt-3">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <img src="/img/Image/sl1.png" width="1250" height="400" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block" style="background: #00000050; color: aliceblue;">
+                            <h1>10.000+ kitap çeşitlerimiz sizlerle..</h1>
+                            <h4>Tüm kategorilerimizde sizinle kişisel gelişim'den Klasik romanlar sizleri bekliyor. </h4>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <img src="/img/Image/sl2.png" width="1250" height="400" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block" style="background: #00000050; color: aliceblue;">
+                            <h1>Her ay 2500+ fazla kitap satışımız ile sizleryiz..</h1>
+                            <h4>Sizler ile büyüyoruz kitap satışlarımız her geçen gün artarak büyüyor.</h4>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/img/Image/sl3.jpg" width="1250" height="400" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block" style="background: #00000050; color: aliceblue;">
+                            <h1>Tüm kitaplarda Ücretsiz Kargo hizmeti..</h1>
+                            <h4>Anlaşmalı Kargo firmaları ile 81 il'in tamamına ücretsiz kargo hizmeti vermekteyiz.</h4>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+
+            <!-- slider end -->
+        </div>
+    </div>
+    <!-- card-list start -->
+    <div class="container mb-5 mt-5">
+        <div class="row">
+
+            <!-- Categories list bar start -->
+            <div class="col-md-2">
+                <div class="list-group" id="list-tab" role="tablist" style=" text-align: center;">
+                    <a class="list-group-item list-group-item-action" style="background-color: rgb(8, 8, 253); color: aliceblue;" id="list-home-list">Kategoriler</a>&nbsp;
+                    
+                        <a class="list-group-item list-group-item-action active" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" aria-controls="list-home">CategoryName</a>
+                </div>
+            </div>
+            <!-- Categories list bar end -->
+
+
+            <div class="col-md-8">
+                <div class="row row-cols-md-4 g-4">
+                    @foreach (var item in Model)
+                    {
+                        <div class="col">
+                            <div class="card" style="height:385px;">
+
+
+                                @if (@item.ImagePath == null)
+                                {
+                                    <img src="~/img/Image/resim-yok.png" class="card-img-top" alt="..." style="height:200px;">
+                                }
+                                else
+                                {
+                                    <img src="@item.ImagePath" class="card-img-top" alt="..." style="height:200px;">
+                                }
+
+
+                                <div class="card-body">
+                                    <b class="card-text" style="font-size:14px;color:dimgray;">@item.Title</b>
+                                    <div class="card-footer">
+                                        <label style="font-size:20px;color:crimson;"><b>@item.Price.ToString() ₺</b></label>
+                                        <a asp-action="Details" asp-controller="Home" asp-route-id="@item.Id" class="btn btn-outline-info" style="float:right">Detay</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    }
+
+                </div>
+            </div>
+
+            <!-- N List bar start -->
+            <div class="col-md-2">
+                <div class="list-group" id="list-tab" role="tablist" style=" text-align: center;">
+                    <a class="list-group-item list-group-item-action" style="background-color: rgb(8, 8, 253); color: aliceblue;" id="list-home-list">En Çok Satılanlar</a>&nbsp;
+                    <a class="list-group-item list-group-item-action active" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" aria-controls="list-home">Home</a>
+                    <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list" href="#list-profile" role="tab" aria-controls="list-profile">Profile</a>
+                    <a class="list-group-item list-group-item-action" id="list-messages-list" data-bs-toggle="list" href="#list-messages" role="tab" aria-controls="list-messages">Messages</a>
+                    <a class="list-group-item list-group-item-action" id="list-settings-list" data-bs-toggle="list" href="#list-settings" role="tab" aria-controls="list-settings">Settings</a>
+                </div>
+            </div>
+            <!--N List bar end -->
+        </div>
+    </div>
+    <!-- card-list end -->
+
+</body>
