--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -1,13 +1,21 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+﻿@using BookStore.Models
+
+<!DOCTYPE html>
+<html lang="tr">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>@ViewData["Title"] - Book Store</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link rel="stylesheet" href="//cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css">
+
+
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <header>
@@ -20,21 +28,25 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <button class="btn btn-outline-primary" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
-                                <i class="bi bi-gear"></i> Yönet <i class="bi bi-caret-down-square"></i>
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Kategoriler</a></li>
-                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Author" asp-action="Index">Yazarlar</a></li>
-                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Book" asp-action="Index">Kitaplar</a></li>
-                            </ul>
-                        </li>
+                       
+                            @if (User.IsInRole(UserRoles.Role_Admin))
+                            {
+                            <li class="nav-item dropdown">
+                                <button class="btn btn-outline-primary" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+                                    <i class="bi bi-gear"></i> Yönet <i class="bi bi-caret-down-square"></i>
+                                </button>
 
-                        <li class="d-flex" role="search" style="padding-left: 140px">
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Kategoriler</a></li>
+                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Author" asp-action="Index">Yazarlar</a></li>
+                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Book" asp-action="Index">Kitaplar</a></li>
+                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="User" asp-action="Index">Kullanıcılar</a></li>
+                                </ul>
+                            </li>
+                            }
+                           
+
+                        <li class="d-flex" role="search" style="padding-left: 320px">
                             <input class="form-control mr-2" type="search" placeholder="Aradığınız kitap.." aria-label="Search">
                             <button class="btn btn-outline-success mr-2" type="submit">Ara</button>
                         </li>
@@ -52,11 +64,28 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - BookStore - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    <!-- footer start -->
+    <footer class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container" style="padding-left: 250px">
+            <p>
+                <a class="navbar-brand" href="#">Book Store &nbsp;&nbsp;| </a>
+            </p>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <p>
+                            @DateTime.Now.Year - Tüm hakları gizlidir. | Türkiye'nin en çok satan sanal kitap mağazası | &nbsp;&nbsp;
+                            <a class="link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover" asp-area="Customer" asp-controller="Home" asp-action="Index">www.ak-bookstore.com</a>
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
+    <!-- footer end -->
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
