--- a/BookStore/Areas/Customer/Views/Home/Index.cshtml
+++ b/BookStore/Areas/Customer/Views/Home/Index.cshtml
@@ -69,6 +69,10 @@
                 <div class="row row-cols-md-4 g-4">
                     @foreach (var item in Model)
                     {
+                        @if (item.IsActive)
+                        {
+                            
+                        
                         <div class="col">
                             <div class="card" style="height:385px;">
 
@@ -92,6 +96,7 @@
                                 </div>
                             </div>
                         </div>
+                        }
                     }
 
                 </div>
