--- a/BookStore/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
+++ b/BookStore/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ExternalLoginsModel
 @{
-    ViewData["Title"] = "Manage your external logins";
+    ViewData["Title"] = "Harici girişlerinizi yönetin";
     ViewData["ActivePage"] = ManageNavPages.ExternalLogins;
 }
 
@@ -22,7 +22,7 @@
                                 <div>
                                     <input asp-for="@login.LoginProvider" name="LoginProvider" type="hidden" />
                                     <input asp-for="@login.ProviderKey" name="ProviderKey" type="hidden" />
-                                    <button type="submit" class="btn btn-primary" title="Remove this @login.ProviderDisplayName login from your account">Remove</button>
+                                    <button type="submit" class="btn btn-primary" title="Remove this @login.ProviderDisplayName login from your account">Kaldır</button>
                                 </div>
                             </form>
                         }
@@ -38,7 +38,7 @@
 }
 @if (Model.OtherLogins?.Count > 0)
 {
-    <h4>Add another service to log in.</h4>
+    <h4>Oturum açmak için başka bir hizmet ekleyin.</h4>
     <hr />
     <form id="link-login-form" asp-page-handler="LinkLogin" method="post" class="form-horizontal">
         <div id="socialLoginList">
