--- a/BookStore/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/BookStore/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -9,15 +9,15 @@
 
 <div class="row">
     <div class="col-md-6">
-        <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
+        <p>Hesabınız, bize verdiğiniz kişisel verileri içerir. Bu sayfa, söz konusu verileri indirmenize veya silmenize izin verir.</p>
         <p>
-            <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
+            <strong>Bu verilerin silinmesi, hesabınızın kalıcı olarak kaldırılmasına neden olur ve bu durum kurtarılamaz.</strong>
         </p>
         <form id="download-data" asp-page="DownloadPersonalData" method="post" class="form-group">
-            <button class="btn btn-primary" type="submit">Download</button>
+            <button class="btn btn-primary" type="submit">İndir</button>
         </form>
         <p>
-            <a id="delete" asp-page="DeletePersonalData" class="btn btn-secondary">Delete</a>
+            <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Sil</a>
         </p>
     </div>
 </div>
