--- a/BookStore/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/BookStore/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -9,10 +9,10 @@
     }
 }
 
-<h2>Manage your account</h2>
+<h2 style="text-align:center;">Kullanıcı yönetim paneli</h2>
 
 <div>
-    <h4>Change your account settings</h4>
+    <h4 style="text-align:center; color:darkgreen">Kullanıcı ayarlarınızı değiştirin</h4>
     <hr />
     <div class="row">
         <div class="col-md-3">
