Refactoring and Custom Validation transactions

--- a/BookStore/Areas/Customer/Views/Home/Details.cshtml
+++ b/BookStore/Areas/Customer/Views/Home/Details.cshtml
@@ -62,12 +62,12 @@
                     <div class="col-md-1">
 
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 mt-5 mb-3">
                         <a asp-action="Index" asp-controller="Home" class="btn btn-primary form-control"><i class="bi bi-house-door"></i> Anasayfa</a>
                     </div>
                     <div class="col-md-4">
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 mt-5 mb-3">
                         @if (Model.Book.IsActive==true)
                         {
                             <button type="submit" class="btn btn-success form-control"><i class="bi bi-cart4"></i> Sepete Ekle</button>
