--- a/BookStore/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/BookStore/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
 @model ForgotPasswordConfirmation
 @{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = "Şifreniz mail'inize gönderildi.";
 }
 
 <h1>@ViewData["Title"]</h1>
 <p>
-    Please check your email to reset your password.
+   Parolanızı sıfırlamak için lütfen e-postanızı kontrol edin.
 </p>
 
