--- a/BookStore/Areas/Identity/Pages/Account/Login.cshtml
+++ b/BookStore/Areas/Identity/Pages/Account/Login.cshtml
@@ -24,7 +24,7 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Input.Password">Şifre</label>
-                    <input asp-for="Input.Password" class="form-control" placeholder="Şifrenizi giriniz.."/>
+                    <input asp-for="Input.Password" class="form-control" type="password" placeholder="Şifrenizi giriniz.."/>
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
                 <div class="form-group">
@@ -38,33 +38,6 @@
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary">Giriş Yap</button>
                 </div>
-                <section>
-
-                    @{
-                        if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                        {
-                            <div>
-                                <p>
-                                    There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                                    for details on setting up this ASP.NET application to support logging in via external services.
-                                </p>
-                            </div>
-                        }
-                        else
-                        {
-                            <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                                <div>
-                                    <p>
-                                        @foreach (var provider in Model.ExternalLogins)
-                                        {
-                                            <button type="submit" class="btn btn-success" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                        }
-                                    </p>
-                                </div>
-                            </form>
-                        }
-                    }
-                </section>
                 <div class="form-group">
                     <p>
                         <a id="forgot-password" asp-page="./ForgotPassword">Şifremi Unuttum.</a>
