--- a/BookStore/Areas/Admin/Views/Book/Create.cshtml
+++ b/BookStore/Areas/Admin/Views/Book/Create.cshtml
@@ -53,7 +53,7 @@
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
            <div class="form-group">
-                <label asp-for="IsActive" class="control-label">Stok Durumu</label>
+                <label class="control-label">Stok Durumu</label>
                 <select asp-for="IsActive" class="form-select" aria-label="Stok Durumu">
                     <option value="True" selected>Stokta Var</option>
                     <option value="False">Stokta Yok</option>
