--- a/BookStore/Areas/Admin/Views/Book/Details.cshtml
+++ b/BookStore/Areas/Admin/Views/Book/Details.cshtml
@@ -1,78 +1,77 @@
 ﻿@model BookStore.Models.Book
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Kitap Detayı";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<h1>Kitap Detayı</h1>
 
 <div>
-    <h4>Book</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
+            Kitap Adı :
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Title)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PageCount)
+            Sayfa Sayısı :
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PageCount)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PublishDate)
+            Yayın Tarihi :
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PublishDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
+            Açıklama :
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImagePath)
+            Resim Yolu :
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ImagePath)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
+            Fiyat
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Price)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.StockCount)
+            Stok Adedi :
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.StockCount)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SellCount)
+            Satılan adet sayısı :
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SellCount)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsActive)
+            Aktif / Pasif
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IsActive)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Category)
+            Kategori :
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Category.CategoryName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Author)
+            Yazarı :
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Author.AuthorName)
@@ -80,6 +79,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Id">Düzenle</a> |
+    <a class="btn btn-success" asp-action="Index">Geri'ye Dön</a>
 </div>
