--- a/BookStore/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/BookStore/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ForgotPasswordModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = "Parolanızı mı unuttunuz?";
 }
 
 <h1>@ViewData["Title"]</h1>
@@ -12,11 +12,11 @@
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Input.Email"></label>
+                <label asp-for="Input.Email">Email Giriniz :</label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Gönder</button>
         </form>
     </div>
 </div>
