--- a/BookStore/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
+++ b/BookStore/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ResendEmailConfirmationModel
 @{
-    ViewData["Title"] = "Resend email confirmation";
+    ViewData["Title"] = "E-posta onayını yeniden gönder";
 }
 
 <h1>@ViewData["Title"]</h1>
